@@ -1,3 +1,6 @@
+2011-07-01  Roland Clobus <rclobus@rclobus.nl>
+	* common/gtk/theme.c: Replace GDK deprecated functions.
+
 2011-06-26  Roland Clobus <rclobus@rclobus.nl>
 	* MinGW/Makefile.am, pioneers.nsi.in: Fix the Windows installer.
 	(Taken from the 0.12.4 branch)
